c2rust-transpile/tests/snapshots/snapshots__transpile@factorial.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/factorial.rs
input_file: c2rust-transpile/tests/snapshots/factorial.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn factorial(mut n: core::ffi::c_ushort) -> core::ffi::c_ushort {
    let mut result: core::ffi::c_ushort = 1 as core::ffi::c_ushort;
    let mut i: core::ffi::c_ushort = 1 as core::ffi::c_ushort;
    while (i as core::ffi::c_int) < n as core::ffi::c_int {
        result = (result as core::ffi::c_int * i as core::ffi::c_int) as core::ffi::c_ushort;
        i = i.wrapping_add(1);
    }
    return result;
}
